testsuite/tests/explicit-dicts/should_fail/WrongDictType2.stderr

WrongDictType2.hs:14:6: error:
    • Not a dictionary type: Int -> Eq.Dict Int
    • In the expression: nub ((eqModulo))
      In an equation for ‘f2’: f2 = nub ((eqModulo))
